# cli-tools

./: .gitignore  setup.cfg
to implement/: create_project_symlinks.py  datetime.bat  datetimems.bat  devcontainer.json  login-desc-ecr.bat  login-ngenius-ecr.bat  login-pod-bash.bat  login-pod-sh.bat  pypublish.bat  timecmd.bat  watch.bat
tools/pdf/: cli.py
