[metadata]
name = tools
version = 0.0.0
author = Kieran Bacon
author_email = kieran.bacon@outlook.com
description = Tools

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
# python_requires = >=3.7
install_requires =
    pypdf
    stow
    click
    pymupdf
    piexif
    arrow
package_dir =
    tools = tools

[options.entry_points]
console_scripts = pdf=tools.pdf.cli:cli